External/Releases/A/6-100/V2024.05.11/Body/OldVersions/README_V1.md

***

# 4 year anniversary update (Beta 51, 2024, Saturday, May 11th)

**Tag:** `V2024.05.11`

**Released on:** `2024, Saturday, May 11th at 09:55 pm PST`

***Pre-release***

This is the 51st version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the forty-ninth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

I spent less time on the project today, but still accomplished 2 goals, with only 2 goals remaining, with 14 days to work on them. Work was done later in the day.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/122/) |
| <p align="center"><b>💬️ Feedback 📣️</b></p> |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 50
- - Archived data for discussion 121
- - Archived files related to the 51st remodel <!-- This number should be 1 higher than the release data 2 lines above, and should match the README beta version) !-->
- - No other archived file changes
- **README:**
- - Updated README to version 125 (beta 51)
- - No other updates to the main README file
- **New media:**
- - Added the `Wordmarks` media folder
- - No other new media files
- **Segments:**
- - Updated the `Nicknames` segment
- - Updated the `Feature requests for GitHub` segment
- - Added the `My web stack` segment
- - No other new segment data
- **Other:**
- - No other changes

***
