External/Releases/A/6-100/V2024.05.12/Body/OldVersions/README_V1.md

***

# 4 year anniversary update (Beta 52, 2024, Sunday, May 12th)

**Tag:** `V2024.05.12`

**Released on:** `2024, Sunday, May 12th at 09:56 pm PST`

***Pre-release***

This is the 52nd version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the fiftieth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

I spent less time on the project today, but still made progress. I worked on structuring the last major section to be updated in this cycle: the `My current setup` section. Little work was done elsewhere.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/123/) |
| <p align="center"><b>💬️ Feedback 📣️</b></p> |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 51
- - Archived data for discussion 122
- - Archived files related to the 52nd remodel <!-- This number should be 1 higher than the release data 2 lines above, and should match the README beta version) !-->
- - No other archived file changes
- **README:**
- - Updated README to version 126 (beta 52)
- - No other updates to the main README file
- **New media:**
- - Added files to the `Wordmarks` media folder
- - No other new media files
- **Segments:**
- - Updated the `My current setup` segment
- - Added/split off the `Current software` segment
- - Added/split off the `Current laptop software` segment
- - Added/split off the `Former laptop software` segment
- - Added/split off the `Current desktop software` segment
- - Added/split off the `Former desktop software` segment
- - Added/split off the `Current PDA Phone Tablet software` segment
- - Added/split off the `Former PDA Phone Tablet software` segment
- - No other new segment data
- **Other:**
- - No other changes

***
